Contact & Abuit Us

--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,7 @@
             </header>
             <div ng-show="isOpenMenu" ng-click="invisiBlockStatus()" class="invisibleBlock"></div>
             <img class="logotype" src="img/logo.png" alt="Logo">
-            <div class="view" ng-view>
-            </div>
+            <div class="view" ng-view></div>
             <!--            <footer>
                                             <div class="back-block"><i class="fa fa-chevron-left"></i><span class="button-name">Back</span></div>
                                             <div class="search-block"><span class="button-name">Search</span><i class="fa fa-search"></i></div>
