--- a/www/pages/contact.html
+++ b/www/pages/contact.html
@@ -9,7 +9,7 @@
         <textarea name="message" placeholder="Write your message..." ng-model="contact.message" required></textarea>
     </form>
     <button type="button" ng-click="sendContact(contact)" class="btn btn-primary pad" name="send-button">Send</button>
-    <!--<div ng-map center="[51.5, -0.12]">-->
+    <div ng-map center="[51.5, -0.12]">
 
     </div>
 </div>
