--- a/www/pages/aboutus.html
+++ b/www/pages/aboutus.html
@@ -1,9 +1,20 @@
 <div class="aboutUs">
-    <h1>About Us</h1>
+    <!--<h1>About Us</h1>-->
+    <h1>See what's on offer and how <span>Case</span><span>Re</span><span>Vision</span> can help you!</h1>
     <!--<span>
         CaseReVision is a market first and is aiming to revolutionise the university law sector. CaseReVision aims to create a lasting visual image imprinted in your memory to help you get the key information down when it comes to the all important exam period. Take a look at our sample video and see if you think CaseReVision can help you like we've helped hundreds before you!
     </span>-->
     <div>
-        See what's on offer and how <span>Case</span><span>Re</span><span>Vision</span> can help you!
+        
+        <ul>
+            <li><span>Law Modules and Cases online at the touch of a button</span></li>
+            <li><span>An online learning tool that law students have been crying out for!</span></li>
+            <li><span>Can't get to a computer? We're easily accessible via Laptop, Tablet or Smartphone</span></li>
+            <li><span>Case ReVision is revolutionising the way students learn law</span></li>
+            <li><span>Hundreds of online videos that make learning case studies <b>easy</b> and <b>enjoyable</b></span></li>
+            <li><span>Learn on the move anywhere with CaseReVision</span></li>
+        </ul>
     </div>
+    <video controls="true" width='100%' src='http://caserevision.com/video/secure-f-link/000'></video>
+    
 </div>
