--- a/www/pages/homepage.html
+++ b/www/pages/homepage.html
@@ -10,6 +10,9 @@
         <div ng-hide="isLogged" class="homeContainer">
             <a href="#/login">Login</a><span>Login to your personal account - any device and any time...</span>
         </div>
+        <div ng-show="isLogged" class="homeContainer">
+            <a href="#/sections">Sections</a><span>Revolutionise your case law training</span>
+        </div>
     </div>
     <div class="homeFooter">
         <span>
