--- a/www/pages/sections.html
+++ b/www/pages/sections.html
@@ -1,6 +1,6 @@
-<div class="historylinks" >
+<!--<div class="historylinks" >-->
     <!--<a href="#/sections">Sections</a>-->
-</div>
+<!--</div>-->
 <label class="sectionsTitle">Revolutionise your case law training</label>
 <ul class="list sections">
     <li ng-repeat="section in sections" >
