--- a/www/pages/topic.html
+++ b/www/pages/topic.html
@@ -22,7 +22,7 @@
     <footer>
         <div class="search-block">
             
-            <label><input placeholder="Search" ng-focus="{{window.scroll(0,1000)}}" ng-model="term"><button ng-click="search()"><i class="fa fa-search"></i></button></label>
+            <label><input placeholder="Search"  ng-model="term"><button ng-click="search()"><i class="fa fa-search"></i></button></label>
             <!--<a class="fBtn" href="#/sections" >BACK</a>-->
         </div>
 
