--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,8 @@
             <!--<script src="js/controllers/loginController.js"></script>-->
             <script src="js/libs/angular-route/angular-route.min.js"></script>
             <script src="js/libs/angular-cookies/angular-cookies.min.js"></script>
+            <!--<script src="js/libs/cdv-plugin-paypal-mobile-sdk.js"></script>-->
+            <!--<script src="js/libs/paypal-mobile-js-helper.js"></script>-->
             <!--<script src="js/libs/jwplayer/jwplayer.js"></script>-->
 
             <!--<script src="js/libs/angular-jwplayer/dist/angular-jwplayer.min.js"></script>-->
@@ -65,6 +67,8 @@
             <script src="js/libs/ngCordova/dist/ng-cordova.js"></script>
             <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.js"></script>-->
             <script src="js/controllers/AppController.js"></script>
+            <!--<script src="js/controllers/AppController.js"></script>-->
+            <!--<script src="js/controllers/payment.js"></script>-->
             <script src="js/controllers/LoginController.js"></script>
             <script src="js/controllers/sectionController.js"></script>
             <script src="js/controllers/topicController.js"></script>
@@ -73,6 +77,7 @@
             <script src="js/controllers/aboutUsController.js"></script>
             <script src="js/controllers/contactUsController.js"></script>
             <script src="js/controllers/accessController.js"></script>
+            <script src="js/controllers/searchController.js"></script>
             <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
             <!--<script src="https://code.angularjs.org/1.3.15/angular.js"></script>-->
             <!--<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>-->
