--- a/www/pages/contact.html
+++ b/www/pages/contact.html
@@ -1,6 +1,6 @@
 <div class="contactUs"><h1>Contact </h1>
     <h2>Lorem ipsum</h2>
-    <div ng-map center="[51.5, -0.12]">
+<!--    <div ng-map center="[51.5, -0.12]">
 
-    </div>
+    </div>-->
 </div>
