--- a/www/pages/not_access.html
+++ b/www/pages/not_access.html
@@ -1,43 +1,23 @@
 <div>
     <div class="accessFalseContainer">
         <nav class="accessFalse">
-            <div><a ng-click="clickLaw('contract')">Contract Law<h3>£ 13.99<br><span class="timeBuy">1 Year</span></h3></a><img class="leftarrow" alt="imgArrow" src="img/arrow2.png"></div>
-            <div><a ng-click="clickLaw('criminal')">Criminal Law<h3>£ 13.99<br><span class="timeBuy">1 Year</span></h3></a><img class="rightarrow" alt="imgArrow" src="img/arrow1.png"></div>
-            <a ng-click="clickLaw('Annual')">Annual <span>Subscription</span><h3>£ 21.99<br><span class="timeBuy">for both</span></h3></a>
+            <div><a target="_blank" ng-click="clickLaw(sections_id['Contract Law'])">Contract Law<h3>£ 13.99<br><span class="timeBuy">1 Year</span></h3>
+            </a><img class="leftarrow" alt="imgArrow" src="img/arrow2.png"></div>
+            <div><a target="_blank" ng-click="clickLaw(sections_id['Criminal Law'])">Criminal Law<h3>£ 13.99<br><span class="timeBuy">1 Year</span></h3>
+            </a><img class="rightarrow" alt="imgArrow" src="img/arrow1.png"></div>
+            <a target="_blank" ng-click="clickLaw(sections_id['Annual Subscription'])">Annual <span>Subscription</span>
+                <h3>£ 21.99<br><span class="timeBuy">for both</span></h3></a>
         </nav>
         <span class="acessFalseSubTitle">
             View ALL the case law videos for a full year as many times as you like. Join now to get your personal and secure login for one year.
         </span>
-        <h1 >More Law Sections & Case Law Videos coming soon!</h1>
+        <h1>More Law Sections & Case Law Videos coming soon!</h1>
     </div>
-    <form action="https://secure-test.worldpay.com/wcc/purchase" method=POST>
 
-        <!--This next line contains the testMode parameter - it specifies that the submission is a test submission--> 
-        <input type="hidden" name="testMode" value="100">
-
-        <!--This next line contains a mandatory parameter. Put your Installation ID inside the quotes after value=--> 
-        <input type="hidden" name="instId" value="1091282">
-
-        <!--Another mandatory parameter. Put your own reference identifier for the item purchased inside the quotes after value=--> 
-        <input type="hidden" name="cartId" value="{{cartId}}">
-
-        <!--Another mandatory parameter. Put the total cost of the item inside the quotes after value=--> 
-        <input type="hidden" name="amount" value="{{amount}}">
-
-        <!--Another mandatory parameter. Put the code for the purchase currency inside the quotes after value=--> 
-        <input type="hidden" name="currency" value="GBP">
-        
-        <input type="hidden" name="MC_mycustomvar" value="M_ and MC_ combined">
-
-        <!--This creates the button. When it is selected in the browser, the form submits the purchase details to us.--> 
-        <input id='sbmbtn' type=submit value=" Buy This ">
-
-    </form>
     <div class="homeFooter">
 
         <h1>You could be revising for FREE!</h1>
         <span>When you recommend a friend we'll award you CREDITS visit our website for more details</span>
-
 
     </div>
 
