--- a/www/pages/not_access.html
+++ b/www/pages/not_access.html
@@ -1,13 +1,29 @@
 <div>
     <div class="accessFalseContainer">
         <nav class="accessFalse">
-            <div><a target="_blank" ng-click="clickLaw(sections_id['Contract Law'])">Contract Law<h3>£ 13.99<br><span class="timeBuy">1 Year</span></h3>
-            </a><img class="leftarrow" alt="imgArrow" src="img/arrow2.png"></div>
-            <div><a target="_blank" ng-click="clickLaw(sections_id['Criminal Law'])">Criminal Law<h3>£ 13.99<br><span class="timeBuy">1 Year</span></h3>
-            </a><img class="rightarrow" alt="imgArrow" src="img/arrow1.png"></div>
-            <a target="_blank" ng-click="clickLaw(sections_id['Annual Subscription'])">Annual <span>Subscription</span>
-                <h3>£ 21.99<br><span class="timeBuy">for both</span></h3></a>
+            <div>
+                <a ng-class="{'grey':(buyed.indexOf(1)>-1)}" target="_blank" ng-click="clickLaw(contract)">Contract Law
+                    <h3>£ {{contract.price}}<br><span class="timeBuy">1 Year</span></h3>
+                </a>
+                <img class="leftarrow" alt="imgArrow" src="img/arrow2.png">
+            </div>
+            <div>
+                <a ng-class="{'grey':(buyed.indexOf(2)>-1)}" target="_blank" ng-click="clickLaw(criminal)">Criminal Law
+                    <h3>£ {{criminal.price}}<br><span
+                            class="timeBuy">1 Year</span></h3>
+                </a>
+                <img class="rightarrow" alt="imgArrow" src="img/arrow1.png">
+            </div>
+            <a ng-class="{'grey':(buyed.length>0)}" target="_blank" ng-click="clickLaw(annual)">Annual <span>Subscription</span>
+                <h3>£ {{annual.price}}<br><span class="timeBuy">for both</span></h3>
+            </a>
         </nav>
+        <div  ng-show="isLogged&&!response.promo">
+            <form class="loginForm">
+                <input type="text" ng-model="promo" placeholder="Enter promo-code to get discount" class="loginForm">
+            </form>
+            <input type="button" class="btn" value="Ok" ng-click="SendPromo(promo)">
+        </div>
         <span class="acessFalseSubTitle">
             View ALL the case law videos for a full year as many times as you like. Join now to get your personal and secure login for one year.
         </span>
