--- a/www/pages/aboutus.html
+++ b/www/pages/aboutus.html
@@ -19,7 +19,8 @@
         <!--<li><span>Hundreds of online videos that make learning case studies <b>easy</b> and <b>enjoyable</b></span></li>-->
         <!--<li><span>Learn on the move anywhere with CaseReVision</span></li>-->
         <!--</ul>-->
-        <video controls="true" width='100%' src='http://caserevision.com/video/secure-f-link/000'></video>
+        <!--<img src="img/video_1.png" class="img" ng-click="replace()" alt="1">-->
+        <video poster="img/video_1.png" controls width='100%' class="video" src='http://caserevision.com/video/secure-f-link/000'></video>
     </div>
 
 
@@ -29,7 +30,7 @@
         each video are a series of questions you need to answer. Get it correct and you can then watch the judgement.
         Each video is accompanied with written notes describing the case and judgement to further enhance the learning
         and revision process.
-        <video controls="true" width='100%' src='http://caserevision.com/video/secure-f-link/00'></video>
+        <video poster="img/video_2.png" controls width='100%' src='http://caserevision.com/video/secure-f-link/00'></video>
     </div>
 
 </div>
