--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
         <title>CaseRevision</title>
         <link  href="css/index.css" rel='stylesheet'>
         <link  href="css/layout.css" rel='stylesheet'>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="js/libs/font-awesome/css/font-awesome.min.css">
         <!--<link  href="css/bootstrap-3.3.6-dist/css/bootstrap.css" rel='stylesheet'>-->
 
         <!--<script src="js/index.js"></script>-->
@@ -15,15 +15,13 @@
     <body class="input">
         <div class="head-wrapper">
             <div class="mobile-menu" ng-click="menuLinkClick()" top-menu>
-
             </div>
-
-            <header>
+            <header ng-class="{'headerIsIOS':(isIOS)}">
                 <a href="#/"><i class="fa fa-home"></i></a> 
                 <div class="menu-button" ng-click="menuOpen()"></div>
             </header>
             <div ng-show="isOpenMenu" ng-click="invisiBlockStatus()" class="invisibleBlock" ng-cloak></div>
-            <img class="logotype" src="img/logo.png" alt="Logo">
+            <img class="logotype" ng-class="{'logotypeIsIOS':(isIOS)}" src="img/logo.png" alt="Logo">
             <div class="view" ng-view>
             </div>
             <!--            <footer>
@@ -45,7 +43,7 @@
                 </div>-->
             <script src="cordova.js"></script>
             <script src="js/libs/angular/angular.min.js"></script>
-            <script src="js/libs/jq/jquery.min.js"></script>
+            <script src="js/libs/jq/jquery-2.1.4.min.js"></script>
             <script src="js/libs/ngmap/build/scripts/ng-map.min.js"></script>
             <!--<script src="js/libs/ngvideo/dist/ng-video.min.js"></script>-->
             <!--<script type="text/javascript" src="js/libs/angular-jwplayer/dist/angular-jwplayer.min.js" ></script>-->
@@ -79,6 +77,7 @@
             <script src="js/controllers/accessController.js"></script>
             <script src="js/controllers/searchController.js"></script>
             <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
+            <!--<script src="js/action.js"></script>-->
             <!--<script src="https://code.angularjs.org/1.3.15/angular.js"></script>-->
             <!--<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>-->
 
