--- a/www/pages/action.html
+++ b/www/pages/action.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
+<!--<script src="../js/libs/jq/jquery-2.1.4.min.js"></script>-->
 <script src="../js/action.js"></script>
 </body>
 </html>
