--- a/www/pages/aboutus.html
+++ b/www/pages/aboutus.html
@@ -6,7 +6,7 @@
     </span>-->
     <div class="text">
 
-        CaseReVision is a market first and is aiming to revolutionise the university law sector. CaseReVision aims to
+        <span class="purple">Case</span><span class="green">Re</span><span class="purple">Vision</span> is a market first and is aiming to revolutionise the university law sector. CaseReVision aims to
         create a lasting visual image imprinted in your memory to help you get the key information down when it comes to
         the all important exam period. Take a look at our sample video and see if you think CaseReVision can help you
         like we've helped hundreds before you!
@@ -20,17 +20,24 @@
         <!--<li><span>Learn on the move anywhere with CaseReVision</span></li>-->
         <!--</ul>-->
         <!--<img src="img/video_1.png" class="img" ng-click="replace()" alt="1">-->
+        <div class="img_r">
+        <img  src="img/arrow2.png" alt="">
+        </div>
         <video poster="img/video_1.png" controls width='100%' class="video" src='http://caserevision.com/video/secure-f-link/000'></video>
+
     </div>
 
 
-    <h1>Now you're ready to watch a sample case law video, simply click on the screen below</h1>
+    <div class="img_l">
+        <img  src="img/arrow1.png" alt="">
+    </div>
+    <h1>Now you can watch a case law 1 minute video</h1>
+    <div class="img_r">
+        <img  src="img/arrow2.png" alt="">
+    </div>
     <div class="text">
-        Each individual video lasts one minute and shows a specific case law as a clear working example. At the end of
-        each video are a series of questions you need to answer. Get it correct and you can then watch the judgement.
-        Each video is accompanied with written notes describing the case and judgement to further enhance the learning
-        and revision process.
         <video poster="img/video_2.png" controls width='100%' src='http://caserevision.com/video/secure-f-link/00'></video>
+
     </div>
 
 </div>
