sign up and other

--- a/www/pages/aboutus.html
+++ b/www/pages/aboutus.html
@@ -32,12 +32,8 @@
         <img  src="img/arrow1.png" alt="">
     </div>
     <h1>Now you can watch a case law 1 minute video</h1>
-    <div class="img_r">
-        <img  src="img/arrow2.png" alt="">
-    </div>
     <div class="text">
-        <video poster="img/video_2.png" controls width='100%' src='http://caserevision.com/video/secure-f-link/00'></video>
-
+        <video id="second_video" poster="img/video_2.png" controls width='100%' src='http://caserevision.com/video/secure-f-link/00'></video>
     </div>
 
 </div>
