--- a/www/pages/homepage.html
+++ b/www/pages/homepage.html
@@ -1,6 +1,6 @@
 <div>
     <div class="homeHightContainer">
-        <div class="homeContainer">
+        <div id="first" class="homeContainer">
             <a href="#/about_us">About</a><span>Find out about CaseRevision and how it will work for you...</span>
         </div>
         <div class="homeContainer">
