--- a/www/pages/topic.html
+++ b/www/pages/topic.html
@@ -11,7 +11,9 @@
                         <span>Select the case law from the menu below to view a range of videos</span>
                     </div>-->
         </div>
-
+        <!--<div layout="row" layout-sm="column" layout-align="space-around">-->
+            <!--<md-progress-circular md-mode="indeterminate"></md-progress-circular>-->
+        <!--</div>-->
         <ul class="topicList">
             <li ng-repeat="topic in topics">
                 <a href="#{{page}}/{{topic.id}}">{{topic.name}}</a><i class="fa fa-play"></i>
