--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,10 @@
                 </div>-->
             <script src="cordova.js"></script>
             <script src="js/libs/angular/angular.min.js"></script>
+            <!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>-->
+            <!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>-->
+            <!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>-->
+            <!--<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>-->
             <script src="js/libs/jq/jquery-2.1.4.min.js"></script>
             <script src="js/libs/ngmap/build/scripts/ng-map.min.js"></script>
             <!--<script src="js/libs/ngvideo/dist/ng-video.min.js"></script>-->
@@ -67,6 +71,7 @@
             <script src="js/controllers/AppController.js"></script>
             <!--<script src="js/controllers/AppController.js"></script>-->
             <!--<script src="js/controllers/payment.js"></script>-->
+            <script src="js/controllers/signUpCtrl.js"></script>
             <script src="js/controllers/LoginController.js"></script>
             <script src="js/controllers/sectionController.js"></script>
             <script src="js/controllers/topicController.js"></script>
