issue about video in Page About Us done.

--- a/www/pages/aboutus.html
+++ b/www/pages/aboutus.html
@@ -21,9 +21,9 @@
         <!--</ul>-->
         <!--<img src="img/video_1.png" class="img" ng-click="replace()" alt="1">-->
         <div class="img_r">
-        <img  src="img/arrow2.png" alt="">
+            <img  src="img/arrow2.png" alt="">
         </div>
-        <video poster="img/video_1.png" controls width='100%' class="video" src='http://caserevision.com/video/secure-f-link/000'></video>
+        <video id="first_video" poster="img/video_1.png" controls width='100%' class="video" src='http://caserevision.com/video/secure-f-link/000'></video>
 
     </div>
 
