Added error message "The password should be at least 6 characters"

--- a/www/index.html
+++ b/www/index.html
@@ -43,10 +43,10 @@
                 </div>-->
             <script src="cordova.js"></script>
             <script src="js/libs/angular/angular.min.js"></script>
-            <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
-            <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
-            <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-            <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+            <!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>-->
+            <!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>-->
+            <!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>-->
+            <!--<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>-->
             <script src="js/libs/jq/jquery-2.1.4.min.js"></script>
             <script src="js/libs/ngmap/build/scripts/ng-map.min.js"></script>
             <!--<script src="js/libs/ngvideo/dist/ng-video.min.js"></script>-->
