--- a/www/pages/signUp.html
+++ b/www/pages/signUp.html
@@ -16,11 +16,10 @@
         <input type="text" name="country" placeholder="Country" ng-model="newUser.country">
         <input type="password" name="password" placeholder="Password *" ng-model="newUser.password" ng-minlength="6" required>
         <input type="password" name="confirm_password" placeholder="Confirm Password *"
-               ng-model="newUser.confirm_password" ng-minlength="6" required>
+               ng-model="newUser.confirm_password" required>
         <input type="text" name="discount_code" placeholder="Enter Discount Code" ng-model="newUser.discount_code">
         <input type="email" name="friend_email" placeholder="Sales Person's Email" ng-model="newUser.friend_email"
                ng-pattern="/^\w+.+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$/">
-        <!--<textarea aria-label="term" name="message" ng-model="contact.message" readonly>-->
         <div class="terms">
             <h3>Terms and Conditions & Privacy Policy</h3>
 
