replaced ".com" to ".co.uk"

--- a/www/pages/aboutus.html
+++ b/www/pages/aboutus.html
@@ -23,7 +23,7 @@
         <div class="img_r">
             <img  src="img/arrow2.png" alt="">
         </div>
-        <video id="first_video" poster="img/video_1.png" controls width='100%' class="video" src='http://caserevision.com/video/secure-f-link/000'></video>
+        <video id="first_video" poster="img/video_1.png" controls width='100%' class="video" src='http://caserevision.co.uk/video/secure-f-link/000'></video>
     </div>
 
     <div class="img_l">
@@ -31,7 +31,7 @@
     </div>
     <h1>Now you can watch a case law 1 minute video</h1>
     <div class="text">
-        <video id="second_video" poster="img/S1.png" controls width='100%' src='http://caserevision.com/video/secure-f-link/00'></video>
+        <video id="second_video" poster="img/S1.png" controls width='100%' src='http://caserevision.co.uk/video/secure-f-link/00'></video>
     </div>
 
 </div>
