--- a/www/pages/sections.html
+++ b/www/pages/sections.html
@@ -1,10 +1,7 @@
-<!--<div class="historylinks" >-->
-<!--<a href="#/sections">Sections</a>-->
-<!--</div>-->
 <label class="sectionsTitle">Revolutionise your case law training</label>
 <ul class="list sections">
     <li ng-if="section.id!=5" ng-repeat="section in sections">
-        <!--ng-if добавлен для скрытия личнего круга, который появляется в случае отправки Серегой данных о Annual-->
+        <!--ng-if добавлен для скрытия лишнего круга, который появляется в случае отправки Серегой данных о Annual-->
         <a ng-class="{'disabled':(section.coming_soon==1)}" href="#/section/{{section.id}}">{{section.name}}<img
                 alt="img" src="{{getComingSoon(section.coming_soon)}}" class="{{isCms}}"></a>
     </li>
