--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,7 @@
     <script src="js/controllers/contactUsController.js"></script>
     <script src="js/controllers/accessController.js"></script>
     <script src="js/controllers/searchController.js"></script>
+    <script src="js/controllers/factories.js"></script>
 </div>
 </body>
 </html>
