--- a/www/pages/signUp.html
+++ b/www/pages/signUp.html
@@ -17,7 +17,7 @@
         <input type="password" name="password" placeholder="Password *" ng-model="newUser.password" ng-minlength="6" required>
         <input type="password" name="confirm_password" placeholder="Confirm Password *"
                ng-model="newUser.confirm_password" required>
-        <input type="text" name="discount_code" placeholder="Enter Discount Code" ng-model="newUser.discount_code">
+        <input type="text" name="discount_code" placeholder="Enter Promotion Code" ng-model="newUser.discount_code">
         <input type="email" name="friend_email" placeholder="Sales Person's Email" ng-model="newUser.friend_email"
                ng-pattern="/^\w+.+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$/">
         <div class="terms">
@@ -220,7 +220,7 @@
             <p>We will promptly correct any information found to be incorrect.</p>
         </div>
 
-       <p class="ui"><input id="check" type="checkbox" ng-model="newUser.check"> Accept Terms and Conditions</p>
+       <div class="ui"><input id="check" type="checkbox" ng-model="newUser.check"> Accept Terms and Conditions</div>
     </form>
 
     <p class="error_true">{{message}}</p>
