--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <link href="css/index.css" rel='stylesheet'>
     <link href="css/layout.css" rel='stylesheet'>
     <link rel="stylesheet" href="js/libs/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+    <link rel="stylesheet" href="js/libs/angular-material/angular-material.min.css">
 
 </head>
 <body class="input">
@@ -25,10 +25,10 @@
     <script src="cordova.js"></script>
     <script src="js/libs/angular/angular.js"></script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+    <script src="js/libs/angular-animate/angular-animate.min.js"></script>
+    <script src="js/libs/angular-aria/angular-aria.min.js"></script>
+    <script src="js/libs/angular-messages/angular-messages.min.js"></script>
+    <script src="js/libs/angular-material/angular-material.min.js"></script>
     <script src="js/libs/jq/jquery-2.1.4.min.js"></script>
 
     <script src="js/libs/angular-route/angular-route.min.js"></script>
