--- a/www/pages/signUp.html
+++ b/www/pages/signUp.html
@@ -12,14 +12,14 @@
         <input type="text" name="address1" placeholder="Address 1" ng-model="newUser.address1">
         <input type="text" name="address2" placeholder="Address 2" ng-model="newUser.address2">
         <input type="text" name="address3" placeholder="Address 3" ng-model="newUser.address3">
-        <input type="text" name="zip" placeholder="Zip" ng-model="newUser.zip">
+        <input type="text" name="zip" placeholder="Postcode" ng-model="newUser.zip">
         <input type="text" name="country" placeholder="Country" ng-model="newUser.country">
         <input type="password" name="password" placeholder="Password *" ng-model="newUser.password" ng-minlength="6" required>
         <input type="password" name="confirm_password" placeholder="Confirm Password *"
                ng-model="newUser.confirm_password" required>
         <input type="text" name="discount_code" placeholder="Enter Promotion Code" ng-model="newUser.discount_code">
-        <input type="email" name="friend_email" placeholder="Sales Person's Email" ng-model="newUser.friend_email"
-               ng-pattern="/^\w+.+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$/">
+        <!--<input type="email" name="friend_email" placeholder="Sales Person's Email" ng-model="newUser.friend_email"-->
+               <!--ng-pattern="/^\w+.+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$/">-->
         <div class="terms">
             <h4>Terms and Conditions & Privacy Policy</h4>
 
