--- a/www/pages/homepage.html
+++ b/www/pages/homepage.html
@@ -1,17 +1,17 @@
 <div>
     <div class="homeHightContainer">
-        <div id="first" class="homeContainer">
-            <a href="#/about_us">About</a><span>Find out about CaseRevision and how it will work for you...</span>
+        <div id="first" class="homeContainer" onclick="location.href = '#/about_us'">
+            <a>About</a><span>Find out about CaseRevision and how it will work for you...</span>
         </div>
-        <div class="homeContainer">
-            <a href="#/noaccess">Join Us</a><span>And make a huge difference to how you learn your case law from now on...</span>
+        <div class="homeContainer" onclick="location.href = '#/noaccess'">
+            <a>Join Us</a><span>And make a huge difference to how you learn your case law from now on...</span>
         </div>
-        
-        <div ng-hide="isLogged" class="homeContainer">
-            <a href="#/login">Login</a><span>Login to your personal account - any device and any time...</span>
+
+        <div ng-hide="isLogged" class="homeContainer" onclick="location.href = '#/login'">
+            <a>Login</a><span>Login to your personal account - any device and any time...</span>
         </div>
-        <div ng-show="isLogged" class="homeContainer">
-            <a href="#/sections">Sections</a><span>Revolutionise your case law training</span>
+        <div ng-show="isLogged" class="homeContainer" onclick="location.href = '#/sections'">
+            <a>Sections</a><span>Revolutionise your case law training</span>
         </div>
     </div>
     <div class="homeFooter">
