Created urlFactory Updated queries methods Major markup changes

--- a/www/pages/VerifTmpl.html
+++ b/www/pages/VerifTmpl.html
@@ -1,4 +1,4 @@
 <div class='modal'>
     <p class="little_text">Confirm your email {{email}}</p>
-    <button class='btn' ng-click='close()'>Ok</button>
+    <md-button class='btn' ng-click='close()'>Ok</md-button>
 </div>
