--- a/www/pages/login.html
+++ b/www/pages/login.html
@@ -4,5 +4,5 @@
     <input type="password" name="password" placeholder="Password" ng-model="user.password"  required>
     <div><label><input ng-model="user.remember" ng-checked="user.rememb" type="checkbox" ><span>Remember me</span></label></div>
 </form>
-<button type="button" ng-click="login()" class="btn btn-primary" name="login-button">Login</button>
+<md-button ng-click="login()" class="search-button md-raised md-primary login_btn" name="login-button">Login</md-button>
 
