--- a/www/pages/topic.html
+++ b/www/pages/topic.html
@@ -4,19 +4,20 @@
         </div>
         <div class="titleContainer" breadcrumbs>
         </div>
-        <ul class="topicList">
-            <li ng-repeat="topic in topics">
-                <a href="#{{page}}/{{topic.id}}">{{topic.name}}</a><i class="fa fa-play"></i>
-                <div layout="row" layout-sm="column" layout-align="space-around">
-                </div>
-            </li>
-        </ul>
+        <div class="topicList" layout="column">
+            <md-button ng-repeat="topic in topics" layout="row" layout-align="space-between center"
+                       ng-click="goToPage(page, topic.id)">
+                <div class="topicName">{{topic.name}}</div>
+                <i class="fa fa-play"></i>
+            </md-button>
+        </div>
     </div>
     <footer>
-        <div class="search-block">
-            <label><input placeholder="Search" ng-model="term">
-                <button ng-click="search()"><i class="fa fa-search"></i></button>
-            </label>
+        <div class="search-block" layout="row" layout-align="center center">
+                <input flex="80" placeholder="Search" ng-model="term">
+                <md-button ng-click="search()" class="search-button md-icon-button md-raised md-accent">
+                    <md-icon md-svg-src="search"></md-icon>
+                </md-button>
         </div>
     </footer>
 </div>
