--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     <img class="logotype" src="img/logo.png" alt="Logo">
     <div class="view" ng-view></div>
 
-    <!--<script src="cordova.js"></script>-->
+    <script src="cordova.js"></script>
     <script src="js/libs/angular/angular.js"></script>
 
     <script src="js/libs/angular-animate/angular-animate.min.js"></script>
