--- a/www/pages/header.html
+++ b/www/pages/header.html
@@ -1,9 +1,11 @@
-<header class="home">
-    <md-progress-linear ng-if="$root.circular" class="md-primary" md-mode="query"></md-progress-linear>
+<header class="md-padding">
+    <md-progress-linear ng-if="$root.circular" class="md-accent" md-mode="indeterminate"></md-progress-linear>
     <div layout="row" layout-align="space-between start">
-        <div layout="row" layout-align="space-between start" flex="20">
-            <a href="#/"><i class="fa fa-home"></i></a>
-        </div>
-        <div class="menu-button" ng-click="menuOpen()"></div>
+        <md-button class="md-icon-button md-warm" onclick="location.href = '#/'">
+            <md-icon md-svg-src="home"></md-icon>
+        </md-button>
+        <md-button class="md-icon-button" ng-click="menuOpen()">
+            <md-icon md-svg-src="menu"></md-icon>
+        </md-button>
     </div>
 </header>
