--- a/www/pages/homepage.html
+++ b/www/pages/homepage.html
@@ -1,22 +1,48 @@
-<div>
-    <div class="homeHightContainer">
-        <div id="first" class="homeContainer" onclick="location.href = '#/about_us'">
-            <a>About</a><span>Find out about CaseRevision and how it will work for you...</span>
-        </div>
-        <div class="homeContainer" onclick="location.href = '#/noaccess'">
-            <a>Join Us</a><span>And make a huge difference to how you learn your case law from now on...</span>
-        </div>
-
-        <div ng-hide="isLogged" class="homeContainer" onclick="location.href = '#/login'">
-            <a>Login</a><span>Login to your personal account - any device and any time...</span>
-        </div>
-        <div ng-show="isLogged" class="homeContainer" onclick="location.href = '#/sections'">
-            <a>Sections</a><span>Revolutionise your case law training</span>
+<div class="homeHightContainer">
+    <div class="homeContainer" layout="row" layout-align="center center">
+        <md-button onclick="location.href = '#/about_us'" layout="row" layout-align="center center"
+                   class="first-part md-raised md-primary">
+            About
+        </md-button>
+        <div layout="row" layout-align="center" class="second-part">Find out
+            about CaseRevision and how it will work for you...
         </div>
     </div>
-    <div class="homeFooter">
+
+    <div class="homeContainer" layout="row"
+         layout-align="center center">
+        <md-button onclick="location.href = '#/noaccess'" layout="row" layout-align="center center"
+                   class="first-part md-raised md-primary">
+            Join Us
+        </md-button>
+        <div layout="row" layout-align="center center" class="second-part">And make a huge difference to how you
+            learn your case law from now on...
+        </div>
+    </div>
+
+    <div ng-hide="isLogged" class="homeContainer" layout="row"
+         layout-align="center center">
+        <md-button onclick="location.href = '#/login'" layout="row" layout-align="center center"
+                   class="first-part md-raised md-primary">
+            Login
+        </md-button>
+        <div layout="row" layout-align="center center" class="second-part">Login to your personal account - any
+            device and any time...
+        </div>
+    </div>
+
+    <div ng-show="isLogged" class="homeContainer" layout="row"
+         layout-align="center center">
+        <md-button onclick="location.href = '#/sections'" layout="row" layout-align="center center"
+                   class="first-part md-raised md-primary">
+            Sections
+        </md-button>
+        <div layout="row" layout-align="center center" class="second-part">Revolutionise your case law training
+        </div>
+    </div>
+</div>
+<div class="homeFooter">
         <span>
             View All the case law videos for a full year as many time as you like. Join now to get your personal and secure login.
         </span>
-    </div>
 </div>
