Minor markup fixes

--- a/www/pages/contact.html
+++ b/www/pages/contact.html
@@ -7,5 +7,5 @@
         <input type="text" name="last_name" placeholder="Last name" ng-model="contact.last_name" required>
         <textarea name="message" placeholder="Write your message..." ng-model="contact.message" required></textarea>
     </form>
-    <button type="button" ng-click="sendContact(contact)" class="btn btn-primary pad" name="send-button">Send</button>
+    <md-button ng-click="sendContact(contact)" class="btn btn-primary pad md-raised md-primary" name="send-button">Send</md-button>
 </div>
