--- a/www/pages/homepage.html
+++ b/www/pages/homepage.html
@@ -1,18 +1,15 @@
 <div class="homeHightContainer">
-    <div class="homeContainer" layout="row" layout-align="center center">
-        <md-button onclick="location.href = '#/about_us'" layout="row" layout-align="center center"
-                   class="first-part md-raised md-primary">
+    <div class="homeContainer" layout="row">
+        <md-button onclick="location.href = '#/about_us'" layout="row" class="first-part md-raised md-primary">
             About
         </md-button>
-        <div layout="row" layout-align="center" class="second-part">Find out
+        <div layout="row" layout-align="center center" class="second-part">Find out
             about CaseRevision and how it will work for you...
         </div>
     </div>
 
-    <div class="homeContainer" layout="row"
-         layout-align="center center">
-        <md-button onclick="location.href = '#/noaccess'" layout="row" layout-align="center center"
-                   class="first-part md-raised md-primary">
+    <div class="homeContainer" layout="row">
+        <md-button onclick="location.href = '#/noaccess'" layout="row" class="first-part md-raised md-primary">
             Join Us
         </md-button>
         <div layout="row" layout-align="center center" class="second-part">And make a huge difference to how you
@@ -20,10 +17,8 @@
         </div>
     </div>
 
-    <div ng-hide="isLogged" class="homeContainer" layout="row"
-         layout-align="center center">
-        <md-button onclick="location.href = '#/login'" layout="row" layout-align="center center"
-                   class="first-part md-raised md-primary">
+    <div ng-hide="isLogged" class="homeContainer" layout="row">
+        <md-button onclick="location.href = '#/login'" layout="row" class="first-part md-raised md-primary">
             Login
         </md-button>
         <div layout="row" layout-align="center center" class="second-part">Login to your personal account - any
@@ -31,10 +26,8 @@
         </div>
     </div>
 
-    <div ng-show="isLogged" class="homeContainer" layout="row"
-         layout-align="center center">
-        <md-button onclick="location.href = '#/sections'" layout="row" layout-align="center center"
-                   class="first-part md-raised md-primary">
+    <div ng-show="isLogged" class="homeContainer" layout="row">
+        <md-button onclick="location.href = '#/sections'" layout="row" class="first-part md-raised md-primary">
             Sections
         </md-button>
         <div layout="row" layout-align="center center" class="second-part">Revolutionise your case law training
